分润增加红包下限字段

--- a/app/22busscustomer/views/addad.html
+++ b/app/22busscustomer/views/addad.html
@@ -117,10 +117,17 @@
  </div>
  
 
- <div class="form-group" ng-show="info.ad_type==2 || info.ad_type==3">
+ <div class="form-group" ng-show="info.ad_type==3">
   <label for="inputDate" class="col-sm-4 control-label">广告内容：</label>
   <div class="col-md-6">
   <div text-angular ng-model="info.content"></div>
+  </div>    
+ </div>
+
+ <div class="form-group" ng-show="info.ad_type==2">
+  <label for="inputDate" class="col-sm-4 control-label">广告内容：</label>
+  <div class="col-md-6">
+    <input type="text" class="form-control" ng-model="info.content">
   </div>    
  </div>
 
