--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -60,12 +60,26 @@
 						</div>
 					</div>					
 				</div>
+				<br/>
+					<br/>
+				<div class="col-xs-12 form-group">
+					<div class="col-xs-2">
+						<label for="lrl" class="pull-right text-right mt10">红包下限&nbsp;&nbsp;&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-8">
+						<div class="input-group">
+							<span class="input-group-addon">¥</span>
+							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0'
+							ng-model="salefrobj.rebate_lower">
+						</div>
+					</div>					
+				</div>
 
 					<br/>
 					<br/>
 				<div class="col-xs-12 form-group">
 					<div class="col-xs-2">
-						<label for="lrl" class="pull-right text-right mt10">推荐&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<label for="lrl" class="pull-right text-right mt10">推荐到搜索列表&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
 					<div class="col-xs-8">
 						<div class="input-group">
