--- a/app/07product/views/p_integral.html
+++ b/app/07product/views/p_integral.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12" >
+<div class="col-xs-12 mt10" >
 
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
