--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12">
+<div class="col-xs-12 mt10">
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			销售品分润设置<button type="button" 
