--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -36,7 +36,7 @@
 	        <td class="col-md-3 text-center">{{obj.papersno}}</td>
 	        <td class="col-md-2 text-center">{{obj.card_status_z}}</td>
 	        <td class="col-md-3 text-center">
-	        	<a ng-show="obj.card_status_z=='已生效' " ng-click="lost()" class="btn btn-danger btn-xs">挂失</a>	
+	        	<a ng-show="obj.card_status_z=='已使用' " ng-click="lost()" class="btn btn-danger btn-xs">挂失</a>	
 	        </td>
 	      </tr>
 	    </tbody>
