--- a/app/02device/views/tickettypelist.html
+++ b/app/02device/views/tickettypelist.html
@@ -7,10 +7,10 @@
     <div class="">
         <div class="checkbox" ng-repeat="obj in objs">
           <label>
-            <input type="checkbox" value="{{obj.code}}"
+            <input type="checkbox" value="{{obj.CODE}}"
             ng-checked="obj.iselected == 1"
             ng-click="selection($event,obj)">
-            {{obj.name}}
+            {{obj.NAME}}
           </label>
         </div>
     </div>
