--- a/app/07product/views/aplist.html
+++ b/app/07product/views/aplist.html
@@ -12,7 +12,7 @@
 					<button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
 				</div>
 				<div class="col-sm-2 text-right">
-					<button type="button" class="btn btn-info new" ng-click="create()">创建产品</button>
+					<!--<button type="button" class="btn btn-info new" ng-click="create()">创建产品</button>-->
 				</div>
 			</div>
 		</div>
