--- a/app/07product/views/p_affirm.html
+++ b/app/07product/views/p_affirm.html
@@ -72,7 +72,7 @@
 		</div>
 	</div>
 
-	<div class="col-xs-10" >
+	<div class="col-xs-10"  ng-if="(saleobj.state == '0') && (util.what != 'info')">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label"></label>
 			<div class="col-sm-10 col-xs-12">
