--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 mt10">
-	<div class="panel panel-default form-horizontal">
+	<!--<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			销售品分润设置<button type="button" 
 				class="btn btn-xs btn-info pull-right"
@@ -8,7 +8,7 @@
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 			</button>
 		</div>
-		<div class="panel-body">
+		<div class="panel-body">-->
 			<div class="container-fluid form-group">
 				<div class="col-xs-12 form-group" >
 					<!--<div class="col-xs-1"></div>-->
@@ -118,7 +118,13 @@
 					</div>					
 				</div>
 
+				<div class="form-group">
+					<div class="col-sm-2 col-xs-12 col-md-offset-5 text-center">
+						<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="saleFrSetSave()">保存</button>
+					</div>
+				</div>
+
 			</div>
-		</div>
-	</div>
+		<!--</div>
+	</div>-->
 </div>
