--- a/app/07product/views/p_affirm.html
+++ b/app/07product/views/p_affirm.html
@@ -5,7 +5,7 @@
 			<label class="col-xs-2 control-label">确认项</label>
 			<div class="col-xs-10">
 				<select class="form-control" 
-				ng-model="affirm.sysaffirm_target_code" 
+				ng-model="affirm.sysaffirm_target_code" ng-disabled="util.what == 'info'"
 				ng-options="ticket_sys_affirm.value as ticket_sys_affirm.label for ticket_sys_affirm in page.affirmlist"
 	            >
 	            </select>
@@ -23,7 +23,7 @@
 			<label class="col-xs-2 control-label">商品id</label>
 			<div class="col-xs-10">
 				<input type="text" class="form-control"
-				ng-model="affirm.sysaffirm_target_goods_code"
+				ng-model="affirm.sysaffirm_target_goods_code"  ng-disabled="util.what == 'info'"
 				>
 			</div>
 		</div>
@@ -40,12 +40,12 @@
 			<div class="col-xs-10">
 		    	<label class="radio-inline">
 				  <input type="radio" name="sysaffirm_target_goods_back_type" value="0"
-				  ng-model="affirm.sysaffirm_target_goods_back_type"
+				  ng-model="affirm.sysaffirm_target_goods_back_type" ng-disabled="util.what == 'info'"
 				  > 不限制
 				</label>
 				<label class="radio-inline">
 				  <input type="radio" name="sysaffirm_target_goods_back_type" value="1"
-				  ng-model="affirm.sysaffirm_target_goods_back_type"
+				  ng-model="affirm.sysaffirm_target_goods_back_type" ng-disabled="util.what == 'info'"
 				  > 只能退最大可用数量
 				</label>
 		    </div>
@@ -60,12 +60,12 @@
 			<div class="col-xs-10">
 		    	<label class="radio-inline">
 				  <input type="radio" name="sysaffirm_target_goods_child_flag" value="0"
-				  ng-model="affirm.sysaffirm_target_goods_child_flag"
+				  ng-model="affirm.sysaffirm_target_goods_child_flag" ng-disabled="util.what == 'info'"
 				  > 成人
 				</label>
 				<label class="radio-inline">
 				  <input type="radio" name="sysaffirm_target_goods_child_flag" value="1"
-				  ng-model="affirm.sysaffirm_target_goods_child_flag"
+				  ng-model="affirm.sysaffirm_target_goods_child_flag" ng-disabled="util.what == 'info'"
 				  > 儿童
 				</label>
 		    </div>
