--- a/app/21card/views/cardorderinfo.html
+++ b/app/21card/views/cardorderinfo.html
@@ -83,6 +83,13 @@
         <div class="col-xs-6">
 
         <div class="form-group">
+            <label class="col-xs-6 control-label">操作方式</label>
+            <div class="col-xs-6">
+                <p class="form-control-static">{{obj.operationname}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label class="col-xs-6 control-label">订单类型</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.order_typename}}</p>
