--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -52,6 +52,22 @@
 	</div>
 
 	<div class="form-group">
+	    <label class="col-xs-3 control-label">操作方式</label>
+	    <div class="col-xs-9">
+	    	<label class="radio-inline">
+			  <input type="radio" name="operation" value="1"
+			  ng-model="obj.operation"
+			  > 激活
+			</label>
+			<label class="radio-inline">
+			  <input type="radio" name="operation" value="2"
+			  ng-model="obj.operation"
+			  > 绑定
+			</label>
+	    </div>
+  	</div>
+
+	<div class="form-group">
 	    <label class="col-xs-3 control-label">支付类型</label>
 	    <div class="col-xs-9">
 	    	<label class="radio-inline">
