--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -1,15 +1,13 @@
-<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
-	
+<div class="col-xs-10 col-xs-offset-1 form-horizontal">
+
 	<div class="form-group">
 		<label class="col-xs-2 control-label">票种名称</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入票种名称"
-			ng-model="objt.name"
-			>
+			<input type="text" class="form-control" placeholder="请输入票种名称" ng-model="objt.name">
 		</div>
 	</div>
 
-<!-- 	<div class="form-group">
+	<!-- 	<div class="form-group">
 		<label class="col-xs-2 control-label">票种编号</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入票种编号"
@@ -21,21 +19,25 @@
 	<div class="form-group" ng-show="placeid === ''">
 		<label class="col-xs-2 control-label">所属景区</label>
 		<div class="col-xs-6">
-			<select class="form-control" ng-model="objt.place_code" 
-              ng-options="view.code as view.name for view in viewarr"
-              ng-disabled="flag"
-            >
-            </select>
+			<!--<select class="form-control" ng-model="objt.place_code" ng-options="view.code as view.name for view in viewarr" ng-disabled="flag">
+            </select>-->
+
+			<ui-select ng-model="objt.place_code" theme="bootstrap">
+				<ui-select-match placeholder="请选择一个景区">{{$select.selected.name}}</ui-select-match>
+				<ui-select-choices repeat="item.code as item in viewarr | filter: $select.search">
+					<span ng-bind-html="item.name | highlight: $select.search"></span>
+				</ui-select-choices>
+			</ui-select>
 		</div>
 	</div>
 
 	<div class="form-group" ng-show="placeid !== ''">
 		<label class="col-xs-2 control-label">所属景区</label>
 		<div class="col-xs-6">
-			<p class="form-control-static">{{objt.placename}} 
-			<!-- <span ng-show="objt.placecode != null">[</span> -->
-			[{{objt.placecode}}]
-			<!-- <span ng-show="objt.placecode != null">]</span> -->
+			<p class="form-control-static">{{objt.placename}}
+				<!-- <span ng-show="objt.placecode != null">[</span> -->
+				[{{objt.placecode}}]
+				<!-- <span ng-show="objt.placecode != null">]</span> -->
 			</p>
 		</div>
 	</div>
@@ -96,9 +98,7 @@
 	<div class="form-group">
 		<label class="col-xs-2 control-label">预订说明</label>
 		<div class="col-xs-6">
-			<textarea class="form-control" rows="3"
-			ng-model="objt.book_info"
-			></textarea>
+			<textarea class="form-control" rows="3" ng-model="objt.book_info"></textarea>
 		</div>
 	</div>
 
@@ -107,42 +107,38 @@
 		<label class="col-xs-2 control-label">打印设置</label>
 		<div class="col-xs-6">
 			<table class="table table-bordered">
-		      <thead>
-		        <tr>
-		          <th class="col-xs-2 text-center">#</th>
-		          <th class="col-xs-8 text-center">名称</th>
-		          <th class="col-xs-2 text-center">
-		          	<a ng-click="printadd()" class="btn" style="color: green; padding:0px;">
-				        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-				    </a>
-		          </th>
-		        </tr>
-		      </thead>
-		      <tbody>
-		        <tr ng-repeat='obj in objs'>
-		          <td class="text-center "><p class="pt5">{{$index + 1}}</p></td>
-		          <td class="text-center">
-		          	<input type="text" class="form-control" placeholder="请输入打印名称"
-					ng-model="obj.name"
-					>
-		          </td>
-		          <td class="text-center">
-		          	<a ng-click="printdel($index)" class="btn" style="color: red; padding:0px; padding-top: 5px;">
-				        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-				    </a>
-		          </td>
-		        </tr>
-		      </tbody>
-		    </table>
+				<thead>
+					<tr>
+						<th class="col-xs-2 text-center">#</th>
+						<th class="col-xs-8 text-center">名称</th>
+						<th class="col-xs-2 text-center">
+							<a ng-click="printadd()" class="btn" style="color: green; padding:0px;">
+								<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+							</a>
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat='obj in objs'>
+						<td class="text-center ">
+							<p class="pt5">{{$index + 1}}</p>
+						</td>
+						<td class="text-center">
+							<input type="text" class="form-control" placeholder="请输入打印名称" ng-model="obj.name">
+						</td>
+						<td class="text-center">
+							<a ng-click="printdel($index)" class="btn" style="color: red; padding:0px; padding-top: 5px;">
+								<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+							</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</div>
 
 
-	<button 
-    type="button" 
-    class="btn btn-primary btn-lg btn-block" 
-    ng-click="gogo()"
-    >
+	<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="gogo()">
     提交
     </button>
 
