--- a/app/22busscustomer/views/setappointment.html
+++ b/app/22busscustomer/views/setappointment.html
@@ -1,7 +1,7 @@
 
 
 <div class="modal-header">
-    <h4 class="modal-title">奖品信息</h4>
+    <h4 class="modal-title">预约信息</h4>
 </div>
 <div class="modal-body">
     <div class="container-fluid form-horizontal ">
