--- a/app/09place/views/p_view.html
+++ b/app/09place/views/p_view.html
@@ -23,18 +23,8 @@
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">产品分类</label>
 			<div class="col-sm-9 col-xs-12">
-				<select class="form-control" ng-model="viewobj.view_type" ng-change="selection(viewobj.view_type)">
+				<select class="form-control" ng-model="viewobj.view_type" ng-change="selection(data.code)" ng-options="data.code as data.label for data in typedatas">
 					<option value="">请选择</option>
-					<option value="1">景区</option>
-					<option value="2">美食</option>
-				<option value="3">体检</option>
-				<option value="4">健康</option>
-				<option value="5">汽车</option>
-				<option value="6">美发</option>
-				<option value="7">保险</option>
-				<option value="8">亲子</option>
-				<option value="9">休闲</option>
-				<option value="10">摄影</option>
 				</select>
 			</div>
 		</div>
@@ -113,6 +103,21 @@
 				ng-model="viewobj.bef_hour"
 				>
 			</div>
+		</div>
+
+		<div class="col-xs-12 form-group">		
+			<label for="lrl" class="col-sm-3 col-xs-12 control-label">参与评价景区领红包</label>
+			<div class="col-xs-8">
+				<div class="input-group">
+					<input class=""
+					bs-switch
+					type="checkbox" 
+					ng-model="hb.isSelected"
+					switch-size=""
+					ng-change = "onHbChange(hb.isSelected)"
+					> 
+				</div>
+			</div>					
 		</div>
 
 
