--- a/app/07product/views/p_integral.html
+++ b/app/07product/views/p_integral.html
@@ -6,7 +6,7 @@
 				<input type="number" min="0" name="fxbt" class="form-control form-inline" placeholder="积分" ng-model="obj.integral_price" />
 			</div>
 			<div class="col-sm-5 mt10">
-				<font face="Courier" class="text-danger">此名称用于设置最高返还积分</font>
+				<font face="Courier" class="text-danger">此名称用于设置最高可用积分</font>
 			</div>
 		</div>
 		<div class="form-group">
