--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -46,7 +46,7 @@
 					<div class="col-xs-5">
 						<div class="input-group">							
 							<input type="number" class="form-control" placeholder="利润率" min='0'
-							ng-model="salefrobj.profit_ratio">
+							ng-model="salefrobj.profit_ratio" value="0">
 							<span class="input-group-addon">%</span>
 						</div>
 					</div>
@@ -63,7 +63,9 @@
 					</div>
 					<div class="col-xs-5">
 						<div class="input-group col-xs-12">
-							<p class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true" style="border-radius: 3px">{{(infodata.guide_price-infodata.cost_price)*salefrobj.profit_ratio*0.01}}</p>							
+							<p class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true" style="border-radius: 3px">
+								{{(infodata.guide_price-infodata.cost_price)*(salefrobj.profit_ratio*0.01+1)}}
+							</p>							
 							<!--<p type="type" class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true">-->
 						</div>
 					</div>
