--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -46,7 +46,7 @@
 					<div class="col-xs-5">
 						<div class="input-group">							
 							<input type="number" class="form-control" placeholder="利润率" min='0'
-							ng-model="salefrobj.profit_ratio" value="0">
+							ng-model="salefrobj.profit_ratio" value="0" ng-change="change()">
 							<span class="input-group-addon">%</span>
 						</div>
 					</div>
@@ -63,35 +63,45 @@
 					</div>
 					<div class="col-xs-5">
 						<div class="input-group col-xs-12">
-							<p class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true" style="border-radius: 3px">
-								{{(infodata.guide_price-infodata.cost_price)*(salefrobj.profit_ratio*0.01+1)}}
-							</p>							
-							<!--<p type="type" class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true">-->
+							<!--<p class="form-control" placeholder="利润" ng-model="salefrobj.profit" ng-disabled="true" style="border-radius: 3px">
+								{{(infodata.guide_price-infodata.cost_price*(salefrobj.profit_ratio*0.01+1)).toFixed(2)}}
+							</p>-->
+							<input type="text" class="form-control" placeholder="利润" ng-model="salefrobj.profit">
 						</div>
 					</div>
-					<div class="col-sm-3 mt10">
-						<font face="Courier" class="text-danger">利润率等于(居游价-成本价)*利润率</font>
+					<div class="col-sm-4 mt10">
+						<font face="Courier" class="text-danger">利润率=居游价-成本价*(利润率+1)</font>
 					</div>	
 				</div>
 			
 					<br/>
 					<br/>
-				<div class="col-xs-12 form-group">
+				<div class="col-xs-12 form-group form-inline">
 					<div class="col-xs-2">
-						<label for="lrl" class="pull-right text-right mt10">红包上限&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<label for="lrl" class="pull-right text-right mt10">红包金额&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-5">
+					<div class="col-xs-2">
 						<div class="input-group">
 							<span class="input-group-addon">¥</span>
 							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0' step=""
-							ng-model="salefrobj.rebate_unlimited">
+							ng-model="salefrobj.rebate_lower">
 						</div>
 					</div>
+					<div class="col-xs-1">
+						<label for="lrl" class="pull-right text-right mt10">-----&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-2">
+						<div class="input-group">
+							<span class="input-group-addon">¥</span>
+							<input type="number" class="form-control" placeholder="红包金额不能为负数" min='0' max="" 
+							ng-model="salefrobj.rebate_unlimited">
+						</div>
+					</div>	
 					<div class="col-sm-3 mt10">
-						<font face="Courier" class="text-danger"></font>
+						<font face="Courier" class="text-danger">红包金额  下限-----上限</font>
 					</div>						
 				</div>
-				<br/>
+				<!--<br/>
 					<br/>
 				<div class="col-xs-12 form-group">
 					<div class="col-xs-2">
@@ -107,7 +117,7 @@
 					<div class="col-sm-3 mt10">
 						<font face="Courier" class="text-danger">红包下限金额最高不能超过利润</font>
 					</div>				
-				</div>
+				</div>-->
 					<br/>
 					<br/>
 				<div class="col-xs-12 form-group">
