修改添加奖品时价格处理问题

--- a/app/09place/views/p_store.html
+++ b/app/09place/views/p_store.html
@@ -129,9 +129,9 @@
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">排序</label>
 			<div class="col-sm-9 col-xs-12">
-				<input type="text" class="form-control" 
+				<input type="number" class="form-control" 
 				ng-model="storeobj.merchant_asort"
-				>
+				placeholder="填写数字,数字越大排序越靠前">
 			</div>
 		</div>
 
