--- a/app/22busscustomer/views/customerlist.html
+++ b/app/22busscustomer/views/customerlist.html
@@ -8,7 +8,7 @@
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <input type="text" class="form-control" ng-model="info.mobile" placeholder="联系电话">
                   &nbsp;&nbsp;
-                  <input type="text" class="form-control" ng-model="info.title" placeholder="产品名称">
+                  <input type="text" class="form-control" ng-model="info.title" placeholder="产品标题">
                   &nbsp;&nbsp;
                   <div class="form-group pull-right">
                       <button type="button" class="btn btn-primary" ng-click="search()">搜索预约人</button>
