--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -70,7 +70,7 @@
 						</div>
 					</div>
 					<div class="col-sm-4 mt10">
-						<font face="Courier" class="text-danger">利润率=居游价-成本价*(利润率+1)</font>
+						<font face="Courier" class="text-danger">利润=居游价-成本价*(利润率+1)</font>
 					</div>	
 				</div>
 			
