--- a/app/07product/views/tkttype.html
+++ b/app/07product/views/tkttype.html
@@ -61,7 +61,7 @@
           <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
           <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
           <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
-          <a ng-click="auth(obj.code)" class="btn btn-warning btn-xs">消票权限</a>
+          <!--<a ng-click="auth(obj.code)" class="btn btn-warning btn-xs">消票权限</a>-->
           <!-- <a ng-click="updateTicket(obj.code)" class="btn btn-warning btn-xs">更新票有效期</a> -->
         </td>
       </tr>
